// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with children 1`] = `
.c3 {
  display: inline-block;
  width: 24px;
  height: 24px;
  color: currentColor;
  stroke-width: 2;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  color: rgba(0,3,6,0.87);
}

.c1 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  width: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
}

.c4 {
  margin-left: 16px;
  line-height: 1.25;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  line-height: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: transparent;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,3,6,0.26);
  border-radius: 4px;
}

<label
  className="c0"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInvalid={[Function]}
    type="checkbox"
    value="on"
  />
  <span
    className="c2 c3"
    color="currentColor"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100%\\" height=\\"100%\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"inherit\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"feather feather-check\\"><polyline points=\\"20 6 9 17 4 12\\"></polyline></svg>",
      }
    }
    size={24}
    strokeWidth={2}
  />
  <span
    className="c4"
  >
    Normal Text
    <strong>
      Strong
    </strong>
  </span>
</label>
`;

exports[`renders with custom margin 1`] = `
.c3 {
  display: inline-block;
  width: 24px;
  height: 24px;
  color: currentColor;
  stroke-width: 2;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  color: rgba(0,3,6,0.87);
}

.c1 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  width: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
}

.c4 {
  margin-left: 100px;
  line-height: 1.25;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  line-height: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: transparent;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,3,6,0.26);
  border-radius: 4px;
}

<label
  className="c0"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInvalid={[Function]}
    type="checkbox"
    value="on"
  />
  <span
    className="c2 c3"
    color="currentColor"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100%\\" height=\\"100%\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"inherit\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"feather feather-check\\"><polyline points=\\"20 6 9 17 4 12\\"></polyline></svg>",
      }
    }
    size={24}
    strokeWidth={2}
  />
  <span
    className="c4"
  >
    Test Label
  </span>
</label>
`;

exports[`renders with label 1`] = `
.c3 {
  display: inline-block;
  width: 24px;
  height: 24px;
  color: currentColor;
  stroke-width: 2;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  color: rgba(0,3,6,0.87);
}

.c1 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  width: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
}

.c4 {
  margin-left: 16px;
  line-height: 1.25;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  line-height: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: transparent;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,3,6,0.26);
  border-radius: 4px;
}

<label
  className="c0"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInvalid={[Function]}
    type="checkbox"
    value="on"
  />
  <span
    className="c2 c3"
    color="currentColor"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100%\\" height=\\"100%\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"inherit\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"feather feather-check\\"><polyline points=\\"20 6 9 17 4 12\\"></polyline></svg>",
      }
    }
    size={24}
    strokeWidth={2}
  />
  <span
    className="c4"
  >
    Test Label
  </span>
</label>
`;

exports[`renders without crashing 1`] = `
.c3 {
  display: inline-block;
  width: 24px;
  height: 24px;
  color: currentColor;
  stroke-width: 2;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  color: rgba(0,3,6,0.87);
}

.c1 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  width: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
}

.c4 {
  margin-left: 16px;
  line-height: 1.25;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  line-height: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: transparent;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,3,6,0.26);
  border-radius: 4px;
}

<label
  className="c0"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onInvalid={[Function]}
    type="checkbox"
    value="on"
  />
  <span
    className="c2 c3"
    color="currentColor"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100%\\" height=\\"100%\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"inherit\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"feather feather-check\\"><polyline points=\\"20 6 9 17 4 12\\"></polyline></svg>",
      }
    }
    size={24}
    strokeWidth={2}
  />
  <span
    className="c4"
  >
    
  </span>
</label>
`;
